--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -19,6 +19,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api_url = \"https://test2-api.nifs.no/tournaments/5\"\n",
+    "\n",
+    "r = requests.get(url=api_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Eliteserien', 'gender': 'men', 'level': 1, 'country': {'name': 'Norge', 'shortName': 'NOR', 'type': 'nifs:countryCompact', 'uid': 'cou_c_1', 'id': 1}, 'neutralVenues': False, 'tournamentTypeId': 2, 'tournamentCategoryId': 1, 'visibilityId': 1, 'norwegianDescription': 'Øverste divisjon i Norge', 'names': [{'name': 'Eliteserien', 'use': 'NTB-navn', 'useId': 22, 'dateStart': None, 'dateEnd': None, 'type': 'nifs:name', 'uid': 'nto_3', 'id': 3}, {'name': 'Eliteserien', 'use': 'NTB-navn', 'useId': 22, 'dateStart': None, 'dateEnd': None, 'type': 'nifs:name', 'uid': 'nto_3', 'id': 3}], 'logo': {'url': 'https://s3-eu-west-1.amazonaws.com/ntb-nifs/44275.png', 'type': 'nifs:image', 'uid': 'i_44275', 'id': 44275}, 'type': 'nifs:tournament', 'uid': 't_5', 'id': 5, 'sportId': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(r.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
