Get played match results in csv format

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -8837,6 +8837,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aalesund - Molde: 1 - 4\n",
+      "Odd - Sandefjord: 1 - 2\n",
+      "Rosenborg - Kristiansund: 0 - 0\n",
+      "Stabæk - Mjøndalen: 0 - 0\n",
+      "Viking - Bodø/Glimt: 2 - 4\n",
+      "Sarpsborg 08 - Vålerenga: 0 - 1\n",
+      "Start - Strømsgodset: 2 - 2\n",
+      "Haugesund - Brann: 1 - 2\n",
+      "Mjøndalen - Sarpsborg 08: 1 - 0\n",
+      "Molde - Rosenborg: 1 - 0\n",
+      "Bodø/Glimt - Haugesund: 6 - 1\n",
+      "Kristiansund - Aalesund: 7 - 2\n",
+      "Sandefjord - Start: 2 - 2\n",
+      "Strømsgodset - Odd: 1 - 0\n",
+      "Vålerenga - Stabæk: 2 - 2\n",
+      "Brann - Viking: 3 - 0\n",
+      "Aalesund - Brann: 2 - 2\n",
+      "Haugesund - Kristiansund: 2 - 2\n",
+      "Stabæk - Sandefjord: 2 - 0\n",
+      "Start - Molde: 2 - 3\n",
+      "Viking - Mjøndalen: 1 - 1\n",
+      "Odd - Vålerenga: 4 - 1\n",
+      "Sarpsborg 08 - Strømsgodset: 2 - 3\n",
+      "Rosenborg - Bodø/Glimt: 2 - 3\n",
+      "Start - Odd: 0 - 5\n",
+      "Vålerenga - Viking: 2 - 1\n",
+      "Bodø/Glimt - Sarpsborg 08: 2 - 1\n",
+      "Mjøndalen - Kristiansund: 1 - 2\n",
+      "Molde - Stabæk: 4 - 1\n",
+      "Sandefjord - Haugesund: 0 - 1\n",
+      "Strømsgodset - Aalesund: 1 - 1\n",
+      "Brann - Rosenborg: 1 - 2\n",
+      "Aalesund - Mjøndalen: 1 - 3\n",
+      "Haugesund - Start: 1 - 0\n",
+      "Odd - Bodø/Glimt: 0 - 4\n",
+      "Stabæk - Strømsgodset: 2 - 0\n",
+      "Viking - Sandefjord: 2 - 0\n",
+      "Rosenborg - Vålerenga: 1 - 1\n",
+      "Kristiansund - Molde: 2 - 2\n",
+      "Sarpsborg 08 - Brann: 0 - 1\n",
+      "Start - Viking: 1 - 1\n",
+      "Vålerenga - Aalesund: 2 - 2\n",
+      "Bodø/Glimt - Brann: 5 - 0\n",
+      "Molde - Mjøndalen: 2 - 1\n",
+      "Odd - Haugesund: 0 - 0\n",
+      "Sandefjord - Sarpsborg 08: 0 - 3\n",
+      "Strømsgodset - Kristiansund: 2 - 2\n",
+      "Stabæk - Rosenborg: 0 - 3\n",
+      "Haugesund - Molde: 0 - 3\n",
+      "Rosenborg - Strømsgodset: 3 - 0\n",
+      "Aalesund - Bodø/Glimt: 1 - 6\n",
+      "Kristiansund - Stabæk: 1 - 2\n",
+      "Mjøndalen - Vålerenga: 0 - 1\n",
+      "Sarpsborg 08 - Start: 1 - 0\n",
+      "Viking - Odd: 1 - 2\n",
+      "Brann - Sandefjord: 3 - 1\n",
+      "Bodø/Glimt - Kristiansund: 2 - 1\n",
+      "Molde - Viking: 5 - 0\n",
+      "Sandefjord - Aalesund: 1 - 0\n",
+      "Strømsgodset - Mjøndalen: 2 - 1\n",
+      "Vålerenga - Haugesund: 1 - 0\n",
+      "Odd - Brann: 1 - 0\n",
+      "Stabæk - Sarpsborg 08: 1 - 1\n",
+      "Start - Rosenborg: 0 - 0\n",
+      "Mjøndalen - Bodø/Glimt: 2 - 3\n",
+      "Haugesund - Viking: 0 - 2\n",
+      "Aalesund - Stabæk: 1 - 3\n",
+      "Kristiansund - Vålerenga: 0 - 0\n",
+      "Rosenborg - Sandefjord: 2 - 1\n",
+      "Sarpsborg 08 - Odd: 2 - 0\n",
+      "Strømsgodset - Molde: 0 - 4\n",
+      "Brann - Start: 1 - 1\n",
+      "Odd - Aalesund: 3 - 2\n",
+      "Brann - Kristiansund: 1 - 1\n",
+      "Bodø/Glimt - Molde: 3 - 1\n",
+      "Sandefjord - Mjøndalen: 1 - 0\n",
+      "Start - Stabæk: 0 - 0\n",
+      "Viking - Sarpsborg 08: 3 - 0\n",
+      "Vålerenga - Strømsgodset: 2 - 0\n",
+      "Haugesund - Rosenborg: 1 - 0\n",
+      "Aalesund - Start: 3 - 2\n",
+      "Kristiansund - Sandefjord: 3 - 1\n",
+      "Mjøndalen - Odd: 0 - 2\n",
+      "Sarpsborg 08 - Haugesund: 0 - 0\n",
+      "Strømsgodset - Brann: 3 - 1\n",
+      "Molde - Vålerenga: 4 - 1\n",
+      "Stabæk - Bodø/Glimt: 2 - 2\n",
+      "Rosenborg - Viking: 3 - 0\n",
+      "Sandefjord - Molde: 2 - 1\n",
+      "Brann - Vålerenga: 1 - 2\n",
+      "Bodø/Glimt - Strømsgodset: 3 - 2\n",
+      "Haugesund - Stabæk: 3 - 1\n",
+      "Sarpsborg 08 - Aalesund: 4 - 0\n",
+      "Start - Mjøndalen: 3 - 0\n",
+      "Viking - Kristiansund: 1 - 2\n",
+      "Odd - Rosenborg: 2 - 1\n",
+      "Molde - Start: 5 - 0\n",
+      "Molde - Brann: 1 - 2\n",
+      "Brann - Mjøndalen: 0 - 1\n",
+      "Vålerenga - Bodø/Glimt: 1 - 0\n",
+      "Stabæk - Brann: 0 - 2\n",
+      "Brann - Strømsgodset: 1 - 1\n",
+      "Sarpsborg 08 - Bodø/Glimt: 1 - 1\n",
+      "Viking - Molde: 2 - 0\n",
+      "Start - Aalesund: 0 - 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for matches in data2:\n",
+    "    if matches['matchStatusId'] == 1:\n",
+    "        print(matches['name'] + \": \"+ str(matches['result']['homeScore90']) + \" - \" + str(matches['result']['awayScore90']))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
